--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li> <a href="recipes/burger.html">Burger recipe</a></li>
+        <li id="list-one"> <a href="recipes/burger.html">Burger recipe</a></li>
         <li><a href="recipes/pizza.html">Pizza recipe</a></li>
         <li><a href="recipes/salad.html">Salad recipe</a></li>
     </ul>
