--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <ul>
+    <ul class=list>
         <li id="list-one"> <a href="recipes/burger.html">Burger recipe</a></li>
-        <li><a href="recipes/pizza.html">Pizza recipe</a></li>
-        <li><a href="recipes/salad.html">Salad recipe</a></li>
+        <li id="list-two"><a href="recipes/pizza.html">Pizza recipe</a></li>
+        <li id="list-three"><a href="recipes/salad.html">Salad recipe</a></li>
     </ul>
    
 </body>
